A2 완성했지만 공공API 오류로 문의 넣음